# vax

./: README.md  pyproject.toml
src/vax/: cli.py
src/vax/dataset/: __init__.py  fashion_mnist.py  generic.py  yolov8.py
src/vax/nn/: convolution.py
src/vax/nn/backbones/: resnet.py
src/vax/train/: classification.py
